// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Input matches snapshot - completed state 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <div
      className="sc-dIouRR bQySUj"
    >
      Your answer
    </div>
    <div
      className="sc-hHLeRK fpWa"
    >
      Photosynthesis is the process by which plants convert light energy into chemical energy.
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm"
  >
    <div
      className="step-card-footer-inner"
    >
      <div>
        <div
          className="sc-kgflAQ jmqgyi"
          role="status"
        >
          Score: 
          8/10
        </div>
        <div
          className="sc-fLlhyt bCYZgk"
        >
          <span
            className="feedback-label"
          >
            Feedback:
          </span>
           
          <div
            className="question-stem"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Good explanation!</p>",
              }
            }
          />
        </div>
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="next-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - initial state 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-llJcti qDfoj"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="mask0_4564_440"
          maskUnits="userSpaceOnUse"
          style={
            Object {
              "maskType": "luminance",
            }
          }
          width="16"
          x="0"
          y="0"
        >
          <path
            clipRule="evenodd"
            d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_4564_440)"
        >
          <rect
            fill="#976502"
            height="16"
            width="16"
          />
        </g>
      </svg>
      You can come back and edit your response until it has been graded.
    </div>
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-idiyUo kvDpsO"
      data-test-id="free-response-box"
      disabled={false}
      onChange={[Function]}
      placeholder="Enter your response..."
      value=""
    />
    <div
      className="sc-bjUoiL dpMbSK"
    >
      <div>
        <span>
           Remaining words: 
          50
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div />
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - preview mode unanswered 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <p
      className="sc-cxabCf leMZGC"
    >
      Unanswered
    </p>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - preview mode with answer 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <div
      className="sc-hHLeRK fpWa"
    >
      Photosynthesis converts sunlight into chemical energy.
    </div>
    <div
      style={
        Object {
          "marginTop": "1.6rem",
        }
      }
    >
      <div
        className="sc-kgflAQ jmqgyi"
        role="status"
      >
        Score: 
        9/10
      </div>
      <div
        className="sc-fLlhyt bCYZgk"
      >
        <span
          className="feedback-label"
        >
          Feedback:
        </span>
         
        <div
          className="question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Excellent work!</p>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - preview mode with grading 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <div
      className="sc-bBrHrO fslSVg"
    >
      <div
        className="sc-ivTmOn lmJbRV"
      >
        <div
          className="sc-hHLeRK fpWa"
        >
          Photosynthesis converts sunlight into chemical energy.
        </div>
        <div
          style={
            Object {
              "marginTop": "1.6rem",
            }
          }
        >
          <div
            className="sc-kgflAQ jmqgyi"
            role="status"
          >
            Score: 
            9/10
          </div>
          <div
            className="sc-fLlhyt bCYZgk"
          >
            <span
              className="feedback-label"
            >
              Feedback:
            </span>
             
            <div
              className="question-stem"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Good work overall.",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="sc-jqUVSM jIqmLJ"
      >
        <div
          className="sc-kDDrLX jeAafv"
        >
          <div
            className="sc-crXcEl gpANJs"
          >
            <label
              className="sc-iqcoie kktHJP"
              htmlFor="score-input"
            >
              Points
            </label>
            <input
              aria-label="Score"
              className="sc-evZas dkKVKh"
              disabled={false}
              id="score-input"
              max={10}
              min={0}
              onChange={[Function]}
              placeholder="--"
              step={1}
              type="number"
              value="9"
            />
            <span>
              out of 
              10
            </span>
          </div>
        </div>
        <div
          className="sc-kDDrLX jeAafv"
        >
          <label
            className="sc-iqcoie kktHJP"
            htmlFor="comment-input"
          >
            Comment
          </label>
          <textarea
            aria-label="Comment"
            className="sc-breuTD gpbziE"
            disabled={false}
            id="comment-input"
            onChange={[Function]}
            placeholder="Enter feedback for the student..."
            value="Good work overall."
          />
        </div>
        <div
          className="sc-ksZaOG cxStGS"
        >
          <button
            className="sc-ftvSup gRHhHP"
            disabled={true}
            onClick={[Function]}
          >
            Update
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - saving state 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-llJcti qDfoj"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="mask0_4564_440"
          maskUnits="userSpaceOnUse"
          style={
            Object {
              "maskType": "luminance",
            }
          }
          width="16"
          x="0"
          y="0"
        >
          <path
            clipRule="evenodd"
            d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_4564_440)"
        >
          <rect
            fill="#976502"
            height="16"
            width="16"
          />
        </g>
      </svg>
      You can come back and edit your response until it has been graded.
    </div>
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-idiyUo kvDpsO"
      data-test-id="free-response-box"
      disabled={true}
      onChange={[Function]}
      placeholder="Enter your response..."
      value="This is being saved"
    />
    <div
      className="sc-bjUoiL dpMbSK"
    >
      <div>
        <span>
           Remaining words: 
          46
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div />
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Saving...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - update mode 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-llJcti qDfoj"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="mask0_4564_440"
          maskUnits="userSpaceOnUse"
          style={
            Object {
              "maskType": "luminance",
            }
          }
          width="16"
          x="0"
          y="0"
        >
          <path
            clipRule="evenodd"
            d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_4564_440)"
        >
          <rect
            fill="#976502"
            height="16"
            width="16"
          />
        </g>
      </svg>
      You can come back and edit your response until it has been graded.
    </div>
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-idiyUo kvDpsO"
      data-test-id="free-response-box"
      disabled={false}
      onChange={[Function]}
      placeholder="Enter your response..."
      value="Previously submitted answer"
    />
    <div
      className="sc-bjUoiL gwhDCs"
    >
      <div>
        <span
          className="last-submitted"
        >
          Last submitted on 
          Jul 26, 2024, 9:00 AM
        </span>
      </div>
      <div>
        <span>
           Remaining words: 
          47
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div />
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP sc-iIPllB fCpaUQ"
          disabled={true}
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="update-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Update
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - with free response text 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-llJcti qDfoj"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="mask0_4564_440"
          maskUnits="userSpaceOnUse"
          style={
            Object {
              "maskType": "luminance",
            }
          }
          width="16"
          x="0"
          y="0"
        >
          <path
            clipRule="evenodd"
            d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_4564_440)"
        >
          <rect
            fill="#976502"
            height="16"
            width="16"
          />
        </g>
      </svg>
      You can come back and edit your response until it has been graded.
    </div>
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-idiyUo kvDpsO"
      data-test-id="free-response-box"
      disabled={false}
      onChange={[Function]}
      placeholder="Enter your response..."
      value="Photosynthesis converts light energy into chemical energy."
    />
    <div
      className="sc-bjUoiL dpMbSK"
    >
      <div>
        <span>
           Remaining words: 
          43
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div />
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="submit-answer-btn"
          disabled={false}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - with submission info 1`] = `
<div
  className="sc-fnykZs jKoZYo"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-llJcti qDfoj"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <mask
          height="16"
          id="mask0_4564_440"
          maskUnits="userSpaceOnUse"
          style={
            Object {
              "maskType": "luminance",
            }
          }
          width="16"
          x="0"
          y="0"
        >
          <path
            clipRule="evenodd"
            d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_4564_440)"
        >
          <rect
            fill="#976502"
            height="16"
            width="16"
          />
        </g>
      </svg>
      You can come back and edit your response until it has been graded.
    </div>
    <div
      className="sc-fEOsli hISZaf"
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-idiyUo kvDpsO"
      data-test-id="free-response-box"
      disabled={false}
      onChange={[Function]}
      placeholder="Enter your response..."
      value=""
    />
    <div
      className="sc-bjUoiL gwhDCs"
    >
      <div>
        <span
          className="last-submitted"
        >
          Last submitted on 
          Jul 26, 2024, 9:00 AM
        </span>
      </div>
      <div>
        <span>
           Remaining words: 
          50
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div />
      <div
        className="controls"
      >
        <button
          className="sc-ftvSup gRHhHP"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
